@@ -19,12 +19,12 @@ import com.wegas.core.persistence.variable.VariableInstance;
 import com.wegas.core.persistence.variable.primitive.utils.StringInstanceCustomizer;
 import com.wegas.editor.view.I18nHtmlView;
 import java.util.List;
-import javax.persistence.CascadeType;
-import javax.persistence.Entity;
-import javax.persistence.Index;
-import javax.persistence.OneToOne;
-import javax.persistence.Table;
-import jdk.nashorn.api.scripting.JSObject;
+import jakarta.persistence.CascadeType;
+import jakarta.persistence.Entity;
+import jakarta.persistence.Index;
+import jakarta.persistence.OneToOne;
+import jakarta.persistence.Table;
+import org.openjdk.nashorn.api.scripting.JSObject;
 import org.eclipse.persistence.annotations.Customizer;
 
 /**
